--- a/project2/src/routes/NewPost.css
+++ b/project2/src/routes/NewPost.css
@@ -1,10 +1,9 @@
 .new-post h2{
     text-align: center;
     margin-bottom: 1rem;
-
 }
-form{
-    max-width: 500px;
+.form{
+    width: 1376px !important;
     width: 100%;
     margin: 0 auto;
 }
@@ -15,6 +14,7 @@ form{
 }
 .form-control label{
     margin-bottom: .5rem;
+    font-size: 25px;
 }
 
 .form-control input,
@@ -22,4 +22,10 @@ form{
     padding: .5rem;
     border-radius: 5px;
     border: none;
+    outline: none;
+    font-size: 20px;
+}
+input{
+    width: 500px;
+    height: 50px;
 }
